Added my arch conf

--- a/btop/btop.conf
+++ b/btop/btop.conf
@@ -236,10 +236,10 @@ rsmi_measure_pcie_speeds = True
 gpu_mirror_graph = True
 
 #* Custom gpu0 model name, empty string to disable.
-custom_gpu_name0 = ""
+custom_gpu_name0 = "GTX 1650"
 
 #* Custom gpu1 model name, empty string to disable.
-custom_gpu_name1 = ""
+custom_gpu_name1 = "Intel"
 
 #* Custom gpu2 model name, empty string to disable.
 custom_gpu_name2 = ""
