--- a/hypr/hyprland/rules.conf
+++ b/hypr/hyprland/rules.conf
@@ -17,6 +17,15 @@ windowrule = float, class:feh
 windowrule = float, class:imv
 windowrule = float, class:system-config-printer
 windowrule = float, class:org\.quickshell
+windowrule = float, class:qimgv
+
+# thunar settings
+windowrule = float, class:Thunar
+windowrule = size 60% 70%, class:Thunar
+windowrule = center 1, class:Thunar
+
+# xfce4 settings
+windowrule = float, class:xfce4\S+
 
 # Float, resize and center
 windowrule = float, class:foot, title:nmtui
@@ -41,6 +50,7 @@ windowrule = workspace special:todo, class:Todoist
 
 # Dialogs
 windowrule = float, title:(Select|Open)( a)? (File|Folder)(s)?
+windowrule = float, title:([Вв]ыбор|[Оо]ткрытие) ([Фф]айла|[Пп]апки)
 windowrule = float, title:File (Operation|Upload)( Progress)?
 windowrule = float, title:.* Properties
 windowrule = float, title:Export Image as PNG
@@ -56,7 +66,8 @@ windowrule = pin, title:Picture(-| )in(-| )[Pp]icture
 
 # Steam
 windowrule = rounding 10, title:, class:steam
-windowrule = float, title:Friends List, class:steam
+windowrule = float, title:(Friends List)|(Список друзей), class:steam
+windowrule = float, title:Settings|Настройки, class:steam
 windowrule = immediate, class:steam_app_[0-9]+  # Allow tearing for steam games
 windowrule = idleinhibit always, class:steam_app_[0-9]+  # Always idle inhibit when playing a steam game
 
