--- a/hypr/variables.conf
+++ b/hypr/variables.conf
@@ -2,8 +2,11 @@
 # Apps
 $terminal = foot
 $browser = zen-browser
-$editor = codium
+$editor = code
 $fileExplorer = thunar
+
+# Font
+$fontFamly = JetBrains-Mono
 
 # Touchpad
 $touchpadDisableTyping = true
