--- a/hypr/hyprland/env.conf
+++ b/hypr/hyprland/env.conf
@@ -16,6 +16,10 @@ env = ELECTRON_OZONE_PLATFORM_HINT, auto
 env = XDG_CURRENT_DESKTOP, Hyprland
 env = XDG_SESSION_TYPE, wayland
 env = XDG_SESSION_DESKTOP, Hyprland
+env = XDG_CONFIG_HOME, $HOME/.config
 
 # ############# Others #############
 env = _JAVA_AWT_WM_NONREPARENTING, 1
+
+# ############ Custom ##############
+env = FONT_FAMILY, $fontFamly
