--- a/hypr/hyprland/execs.conf
+++ b/hypr/hyprland/execs.conf
@@ -32,3 +32,7 @@ exec-once = caelestia shell -d
 
 # Idle daemon
 exec-once = hypridle
+
+exec-once = systemctl --user start hyprpolkitagent
+
+exec-once = cpupower frequency-set -u 3500Mhz
