--- a/hypr/hyprland/input.conf
+++ b/hypr/hyprland/input.conf
@@ -1,10 +1,12 @@
 input {
-    kb_layout = us
+    kb_layout = us, ru
+    kb_options = grp:win_space_toggle
     numlock_by_default = false
     repeat_delay = 250
     repeat_rate = 35
 
     focus_on_close = 1
+    accel_profile = flat
 
     touchpad {
         natural_scroll = true
